<resources>
    <string name="app_name">ForStudent</string>
    <string name="title_home">Home</string>
    <string name="title_timetable">Timetable</string>
    <string name="title_calendar">Calendar</string>
    <string name="title_todo">Todo</string>
    <string name="title_exam">Exam</string>

    <string-array name="header_title">
        <item></item>
        <item>월</item>
        <item>화</item>
        <item>수</item>
        <item>목</item>
        <item>금</item>
    </string-array>

    <string-array name="days">
        <item >월</item>
        <item >화</item>
        <item >수</item>
        <item >목</item>
        <item >금</item>
    </string-array>

    <string-array name="grades43">
        <item >A+</item>
        <item >A0</item>
        <item >A-</item>
        <item >B+</item>
        <item >B0</item>
        <item >B-</item>
        <item >C+</item>
        <item >C0</item>
        <item >C-</item>
        <item >D+</item>
        <item >D0</item>
        <item >D-</item>
        <item >F</item>
        <item >P</item>
    </string-array>

    <string-array name="grades45">
        <item >A+</item>
        <item >A0</item>
        <item >B+</item>
        <item >B0</item>
        <item >C+</item>
        <item >C0</item>
        <item >D+</item>
        <item >D0</item>
        <item >F</item>
        <item >P</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="default_notification_channel_name">channel_name</string>
    <string name="default_notification_channel_id">channel_id</string>
</resources>
