<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/title_home"/>

    <item
        android:id="@+id/navigation_timetable"
        android:icon="@drawable/ic_dashboard_black_24dp"
        android:title="@string/title_timetable"/>

    <item
        android:id="@+id/navigation_calendar"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_calendar"/>

    <item
        android:id="@+id/navigation_todo"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_todo"/>

    <item
        android:id="@+id/navigation_exam"
        android:icon="@drawable/ic_notifications_black_24dp"
        android:title="@string/title_exam"/>
</menu>
